# OpenWorkoutFormat

./: .gitignore  CLAUDE.md  DB-PLAN.md  LICENSE  README.md  SPEC.md  pyproject.toml
.claude/: settings.json
.claude/agents/: spec-checker.md  test-writer.md
.github/workflows/: ci.yml
examples/: WORKOUT-EXAMPLES.json  circuit.owf  composed.owf  crossfit.owf  crossfit_benchmarks.owf  dated_session.owf  easy_run.owf  emom_amrap.owf  endurance.owf  endurance_program.owfp  full_body_circuit.owf  gravel_ride.owf  gym_session.owf  heart_rate_run.owf  hero_wod.owf  hr_zone_run.owf  isopepe_parity.owf  power_accessory_skill.owf  push_pull_legs.owfp  pyramid.owf  pyramid_intervals.owf  strength.owf  strength_lower.owf  strength_program.owfp  strength_upper.owf  swim_intervals.owf  threshold_ride.owf  triathlon.owf  triathlon_brick.owf  weekend_session.owf  yoga_mobility.owf
grit/: pyproject.toml
grit/src/grit/: __init__.py  cli.py
grit/tests/: test_smoke.py
src/owf/: __init__.py  __main__.py  cli.py  errors.py  loader.py  resolver.py  serializer.py  units.py
src/owf/ast/: __init__.py  base.py  blocks.py  expressions.py  params.py  steps.py  visitors.py
src/owf/parser/: __init__.py  block_builder.py  expr_parser.py  frontmatter.py  param_parser.py  scanner.py  step_parser.py
tests/: conftest.py  test_block_builder.py  test_date.py  test_edge_cases.py  test_examples.py  test_expr_parser.py  test_integration.py  test_loader.py  test_param_parser.py  test_resolver.py  test_roundtrip.py  test_scanner.py  test_serializer.py  test_step_parser.py
tests/fixtures/invalid/: unclosed_frontmatter.owf
tests/fixtures/valid/: includes_source.owf  simple_endurance.owf  with_frontmatter.owf
